# claude-bot-infrastructure

./: .env.dotnet.example  .env.dotnet.test  .env.example  .env.new-repo-template  .env.secure  .env.template  .env.test  .gitattributes  .gitignore  CLAUDE.md  CLEANUP_PLAN.md  DUPLICATES_REMOVED.md  Dockerfile.test  MIGRATION_GUIDE.md  README.md  RESTRUCTURE_COMPLETE.md  TESTING_COMPLETE.md  claude-bot-infrastructure.sln  docker-compose.dev.yml  docker-compose.dotnet.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.production.yml  docker-compose.secrets.yml  docker-compose.yml  monitor.sh  pyproject.toml  requirements.txt  self-development.yml  status.sh
.devcontainer/: Dockerfile.claude-bot  Dockerfile.dotnet  Dockerfile.dynamic  docker-compose.yml
.github/workflows/: bot-integration-tests.yml  bot-unit-tests.yml
apps/status-dashboard/: app.py  cloudflare-tunnel.yml
config/: platforms.yml  project-config.dotnet.yml  project-config.test.yml
config/default/: orchestrator-config.yml  platforms.yml
config/examples/: .env.example  claude-instructions-custom.example.md  claude-instructions.md  project-config.example.yml
config/templates/workflow/: 01-issue-analysis.md  02-planning-breakdown.md  03-implementation.md  04-pr-creation-feedback.md
deployment/azure/: setup-azure.sh
deployment/docker/: docker-compose.azure.yml  docker-compose.dev.yml  docker-compose.secure.yml  docker-compose.yml
deployment/scripts/: setup-secure-secrets.sh
docs/: DEPLOYMENT.md  MULTI_PLATFORM_GUIDE.md  QUICK_START_SECRETS.md  README.md  RUNBOOK.md  SECURE_SETUP.md
docs/future-features/: README.md  architecture-evolution.md  community-features.md  devcontainer-integration.md  enhancement-ideas.md
docs/getting-started/: CLAUDE.md
docs/guides/: azure-setup.md  new-repo-setup.md  orchestrator-setup.md  secret-management.md
docs/reference/: testing.md
scripts/: add_task.py  bot-orchestrator.py  bot_orchestrator.py  bot_status.py  build-dynamic-dockerfile.py  build_dynamic_dockerfile.py  cleanup-test-env.sh  config_manager.py  create-docker-secrets.sh  create_test_issues.py  debug-start.sh  deploy.sh  entrypoint-dynamic.sh  github-task-executor.py  health-check-platforms.sh  health-check.sh  issue_watcher.py  metrics.py  platform-manager.py  pr_watcher.py  secrets_loader.py  security.py  setup-labels.py  start-bot-secure.sh  start-bot.sh  status_reporter.py  task_executor.py  test-build.sh  test_error_handling.py
scripts/utils/: __init__.py  logger.py  retry_handler.py
src/: __init__.py
src/claude_bot/: __init__.py
src/claude_bot/executors/: __init__.py  github_task_executor.py  pr_feedback_handler.py  worker_executor.py
status-web/: Dockerfile  README.md
status-web/templates/: dashboard.html
test_data/: status.json
tests/: README.md  __init__.py  test_autonomous_execution.py  test_orchestrator.py  test_workflow_system.py
tests/fixtures/: sample_issues.json  test_environments.json
tests/integration/: test_bot_basic_functionality.py
tests/unit/: test_bot_orchestrator.py
tests/utils/: __init__.py  test_helpers.py
(+20 files in other folders)
